--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem praesentium unde? Modi consequuntur cupiditate, perferendis quas et optio tempore odit amet tenetur, alias omnis magni doloremque nisi. Repudiandae, numquam?</h1>
+    <h1>this is demo ptoject on macbook air M1</h1>
+    <div>
+        <span class="first"><h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, quibusdam! Soluta optio nobis vel minima consequatur possimus. Blanditiis facilis quaerat velit, quasi architecto ducimus labore a hic pariatur, et commodi?</h2></span>
+        <span class="second"><h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia quo veritatis, eum fugiat nulla est et, sapiente excepturi dolorem sint facilis ullam iusto facere, quibusdam explicabo rerum sequi aut voluptatum?</h2></span>
+        <span class="third"><h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus placeat repellendus dolorum ea ex maiores aliquam unde atque, minus enim debitis et aspernatur alias a soluta consequatur vel. Distinctio, aut!</h2></span>
+        <span class="fourth"><h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni, libero nesciunt facere veniam, quas cupiditate illo asperiores possimus quasi minus deleniti, tempora rerum. Cupiditate nihil, commodi molestiae velit enim quaerat!</h2></span>
+    </div>
 </body>
 </html>
